@@ -1,6 +1,9 @@
 <?php
 /*
 
+ Copyright 2001 - 2005 Ampache.org
+ All Rights Reserved
+
  This program is free software; you can redistribute it and/or
  modify it under the terms of the GNU General Public License
  as published by the Free Software Foundation; either version 2
