@@ -1,6 +1,9 @@
 <?php
 /*
 
+ Copyright 2001 - 2005 Ampache.org
+ All Rights Reserved
+
  This program is free software; you can redistribute it and/or
  modify it under the terms of the GNU General Public License
  as published by the Free Software Foundation; either version 2
@@ -19,8 +22,13 @@
 
 $no_session = true;
 require_once('modules/init.php');
-require_once(conf('prefix') . "/modules/xmlrpc/xmlrpcs.inc");
-require_once(conf('prefix') . "/modules/xmlrpc/xmlrpc.inc");
+
+
+if (conf('xml_rpc')) { 
+	require_once(conf('prefix') . "/modules/xmlrpc/xmlrpcs.inc");
+	require_once(conf('prefix') . "/modules/xmlrpc/xmlrpc.inc");
+}
+else { exit(); }
 
 /* Setup the vars we are going to need */
 $access = new Access();
