@@ -17,6 +17,9 @@
 		it handles it correctly, and doesn't remove the row after
 		the script execution has finished, and depends upon the
 		GC to catch it
+	- Added Optional Automatic Bandwidth management for downsampled
+		users based on defined bandwidth limits (Thx Jens)
+	- Prevented Load of XML-RPC library if xml_rpc isn't enabled
 
 
 --------------------------------------------------------------------------
